# carbon-methodology-archive

./: .gitignore  README.md  pyproject.toml  pyrightconfig.json
.github/workflows/: monthly-sync.yml
carbon_methodology_archive.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
methodologies/isometric/biochar/: metadata.json
methodologies/isometric/enhanced-weathering-in-agriculture/: metadata.json
methodologies/isometric/reforestation/: metadata.json
methodologies/verra/VM0007/: metadata.json
methodologies/verra/VM0042/: metadata.json
methodologies/verra/VM0047/: metadata.json
projects/verra/VCS844/: metadata.json
projects/verra/VCS985/: metadata.json
scrapers/: base.py  isometric.py  verra.py
scripts/: generate_changelog.py  run_sync.py
tests/: conftest.py  test_base.py  test_isometric.py  test_verra.py
web/: package-lock.json
web/app/: layout.tsx  page.tsx
web/app/compare/: CompareClient.tsx  page.tsx
web/app/methodology/[registry]/[id]/: ProjectsTab.tsx  TaxonomyTab.tsx  page.tsx
web/lib/: archive.ts  renderContent.tsx  sectionBlocks.tsx  supabase.ts
